--- a/sample/index.html
+++ b/sample/index.html
@@ -3,23 +3,25 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
-<!--[if (gt IE 9)]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<!--[if (gt IE 9)]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
-<head>    
- <!--    California State Template (beta)
+<head>
+    <!--    California State Template (beta)
  
         
         Based on Twitter Bootstrap
     -->
-  <meta charset="utf-8">
-  <title>Sample Home</title>
-  <meta name="Author" content="State of California" />
-  <meta name="Description" content="State of California" />
-  <meta name="Keywords" content="California, government" />
-  <!--#include virtual="/ssi/head-css-js.html" -->
-<script type="text/javascript">
-  var defaultActiveLink = "Components";
-</script>
+    <meta charset="utf-8">
+    <title>Sample Home</title>
+    <meta name="Author" content="State of California" />
+    <meta name="Description" content="State of California" />
+    <meta name="Keywords" content="California, government" />
+    <!--#include virtual="/ssi/head-css-js.html" -->
+    <script type="text/javascript">
+        var defaultActiveLink = "Components";
+    </script>
 </head>
 
 <body>
@@ -59,8 +61,11 @@
                         </ol>
                         <h1>Content Modules &amp; Components</h1>
                         <p>
-                            The following pages include example modules as well as documentation that describe the usage of each module. On any given page you will find a working example of the module, A description of the various classes used in the creation of the module,
-                            as well as the source code that you can copy and past from should you need to. The following pages help to serve as a styleguide as well as documentation.
+                            The following pages include example modules as well as documentation that describe the usage
+                            of each module. On any given page you will find a working example of the module, A
+                            description of the various classes used in the creation of the module,
+                            as well as the source code that you can copy and past from should you need to. The following
+                            pages help to serve as a styleguide as well as documentation.
                         </p>
                         <div class="group">
                             <div class="half">
@@ -73,6 +78,7 @@
                                     <li><a href="blockquotes.html">Blockquotes</a></li>
                                     <li><a href="breadcrumb.html">Breadcrumb</a></li>
                                     <li><a href="buttons.html">Buttons</a></li>
+                                    <li><a href="carousels.html">Carousel</a></li>
                                     <li><a href="cards.html">Cards</a></li>
                                     <li><a href="countdown.html">Countdown</a></li>
                                     <li><a href="hero-info.html">Hero Info</a></li>
@@ -93,24 +99,30 @@
                                     <li><a href="tables.html">Tables</a></li>
                                     <li><a href="testimonials.html">Testimonials</a></li>
                                     <li><a href="text-accent.html">Text Accent Colors</a></li>
-                                    <li><a href="timeline.html">Timeline <span class="label label-info">new</span></a></li>
+                                    <li><a href="timeline.html">Timeline <span class="label label-info">new</span></a>
+                                    </li>
                                     <li><a href="typography.html">Typography</a></li>
                                 </ul>
                             </div>
 
-                           
+
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <h2>Additional Bootstrap CSS & Components</h2>
                                 <p>
-                                    We strongly recommend using the documented State Template Content Modules and Components
-                                    whenever possible; however, for more CSS classes and options as well as components we suggest
-                                    utilizing what is available in Bootstrap first, before developing your own custom code.
+                                    We strongly recommend using the documented State Template Content Modules and
+                                    Components
+                                    whenever possible; however, for more CSS classes and options as well as components
+                                    we suggest
+                                    utilizing what is available in Bootstrap first, before developing your own custom
+                                    code.
                                 </p>
                                 <p>
-                                    <span class="label label-primary">NOTE:</span> When using custom components and content
-                                    modules that are not documented as part of the State Template, migration to future versions
+                                    <span class="label label-primary">NOTE:</span> When using custom components and
+                                    content
+                                    modules that are not documented as part of the State Template, migration to future
+                                    versions
                                     of the State Template may require additional work.
                                 </p>
                             </div>
@@ -122,9 +134,12 @@
                         <h3>Other examples:</h3>
                         <!-- Side navigation -->
                         <div class="list-group">
-                            <a href="/sample/layouts.html" class="list-group-item list-group-item-action"><span class="ca-gov-icon-responsive-alt" aria-hidden="true"></span> Page Layouts</a>
-                            <a href="/sample/color-schemes.html" class="list-group-item list-group-item-action"><span class="ca-gov-icon-grid" aria-hidden="true"></span> Color Schemes</a>
-                            <a href="/sample/navsamples.html" class="list-group-item list-group-item-action"><span class="ca-gov-icon-menu" aria-hidden="true"></span> Navigation Samples</a>
+                            <a href="/sample/layouts.html" class="list-group-item list-group-item-action"><span
+                                    class="ca-gov-icon-responsive-alt" aria-hidden="true"></span> Page Layouts</a>
+                            <a href="/sample/color-schemes.html" class="list-group-item list-group-item-action"><span
+                                    class="ca-gov-icon-grid" aria-hidden="true"></span> Color Schemes</a>
+                            <a href="/sample/navsamples.html" class="list-group-item list-group-item-action"><span
+                                    class="ca-gov-icon-menu" aria-hidden="true"></span> Navigation Samples</a>
                         </div>
                     </div>
                 </div>
@@ -136,4 +151,5 @@
     <!--#include virtual="/ssi/global-footer.html" -->
     <!--#include virtual="/ssi/scripts.html" -->
 </body>
+
 </html>
