Made search to expand in mobile

--- a/ssi/mobile-controls.html
+++ b/ssi/mobile-controls.html
@@ -1,13 +1,15 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
     <span class="mobile-control-group mobile-header-icons">
-    	<!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
+        <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
     </span>
     <div class="mobile-control-group main-nav-icons">
-        <button class="mobile-control toggle-search">
+        <button class="mobile-control toggle-search" data-bs-toggle="collapse" data-bs-target="#head-search"
+            aria-expanded="false" aria-controls="siteSettings">
             <span class="ca-gov-icon-search hidden-print" aria-hidden="true"></span><span class="sr-only">Search</span>
         </button>
-        <button id="nav-icon3" class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation" data-bs-toggle="collapse" data-bs-target="#navigation">
+        <button id="nav-icon3" class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation"
+            data-bs-toggle="collapse" data-bs-target="#navigation">
             <span></span>
             <span></span>
             <span></span>
