--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <!--#include virtual="/ssi/mobile-controls.html" -->
 
         <div class="navigation-search full-width-nav container">
-            <div id="head-search" class="search-container featured-search">
+            <div id="head-search" class="search-container featured-search collapse collapsed">
                 <!-- Include Search -->
+                <!--#include virtual="/ssi/search mobile.html" -->
+            </div>
+            <div id="featured-search" class="search-container featured-search">
                 <!--#include virtual="/ssi/search.html" -->
             </div>
 
