--- a/ssi/settings-bar.html
+++ b/ssi/settings-bar.html
@@ -3,16 +3,26 @@
 
 
         <div class="btn-group btn-group-justified-sm" aria-label="contrastMode">
-            <div class="btn-group"><button type="button" class="btn btn-standout disableHighContrastMode">Default</button></div>
-            <div class="btn-group"><button type="button" class="btn btn-standout enableHighContrastMode">High Contrast</button></div>
+            <div class="btn-group"><button type="button"
+                    class="btn btn-standout disableHighContrastMode">Default</button></div>
+            <div class="btn-group"><button type="button" class="btn btn-standout enableHighContrastMode">High
+                    Contrast</button></div>
         </div>
 
         <div class="btn-group" aria-label="textSizeMode">
             <div class="btn-group"><button type="button" class="btn btn-standout resetTextSize">Reset</button></div>
-            <div class="btn-group"><button type="button" class="btn btn-standout increaseTextSize"><span class="hidden-xs">Increase Font Size</span><span class="visible-xs">Font <span class="sr-only">Increase</span><span class="ca-gov-icon-plus-line font-size-sm" aria-hidden="true"></span></span></button></div>
-            <div class="btn-group"><button type="button" class="btn btn-standout decreaseTextSize"><span class="hidden-xs">Decrease Font Size</span><span class="visible-xs">Font <span class="sr-only">Decrease</span><span class="ca-gov-icon-minus-line font-size-sm" aria-hidden="true"></span></span></button></div>
-            <div class="btn-group"><button type="button" class="btn btn-standout dyslexicFont">Dyslexic Font</button></div>
+            <div class="btn-group"><button type="button" class="btn btn-standout increaseTextSize"><span
+                        class="hidden-xs">Increase Font Size</span><span class="visible-xs">Font <span
+                            class="sr-only">Increase</span><span class="ca-gov-icon-plus-line font-size-sm"
+                            aria-hidden="true"></span></span></button></div>
+            <div class="btn-group"><button type="button" class="btn btn-standout decreaseTextSize"><span
+                        class="hidden-xs">Decrease Font Size</span><span class="visible-xs">Font <span
+                            class="sr-only">Decrease</span><span class="ca-gov-icon-minus-line font-size-sm"
+                            aria-hidden="true"></span></span></button></div>
+            <div class="btn-group"><button type="button" class="btn btn-standout dyslexicFont">Dyslexic Font</button>
+            </div>
         </div>
-        <button type="button" class="close" data-bs-toggle="collapse" data-bs-target="#siteSettings" aria-label="Close"><span aria-hidden="true" class=" ca-gov-icon-close-mark"></span></button>
+        <button type="button" class="close" data-bs-toggle="collapse" data-bs-target="#siteSettings"
+            aria-label="Close"><span aria-hidden="true" class=" ca-gov-icon-close-mark"></span></button>
     </div>
 </div>
