fixed search in mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="navigation-search full-width-nav container">
             <div id="head-search" class="search-container featured-search collapse collapsed">
                 <!-- Include Search -->
-                <!--#include virtual="/ssi/search mobile.html" -->
+                <!--#include virtual="/ssi/search-mobile.html" -->
             </div>
             <div id="featured-search" class="search-container featured-search">
                 <!--#include virtual="/ssi/search.html" -->
