--- a/ssi/mobile-controls.html
+++ b/ssi/mobile-controls.html
@@ -5,7 +5,7 @@
     </span>
     <div class="mobile-control-group main-nav-icons">
         <button class="mobile-control toggle-search" data-bs-toggle="collapse" data-bs-target="#head-search"
-            aria-expanded="false" aria-controls="siteSettings">
+            aria-expanded="false" aria-controls="head-search">
             <span class="ca-gov-icon-search hidden-print" aria-hidden="true"></span><span class="sr-only">Search</span>
         </button>
         <button id="nav-icon3" class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation"
