fixed explore button on the homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!--#include virtual="/ssi/header-large-banner.html" -->
         </section>
 
-        <main class="main-primary">
+        <main class="main-primary" id="main">
             <!-- Begin Main Content -->
             <!--#include virtual="/ssi/section-icon-blocks.html" -->
             <!--#include virtual="/ssi/section-service-advertisement.html" -->
