--- a/ssi/header-large-banner.html
+++ b/ssi/header-large-banner.html
@@ -1,22 +1,29 @@
-  <div class="header-large-banner hidden-print d-block section-primary" style="background-image: url('/images/main-banner9.jpg');">
+<div class="header-large-banner hidden-print d-block section-primary"
+    style="background-image: url('/images/main-banner9.jpg');">
 
     <div class="container text-center top-lg-rel-20pct top-md-rel-10pct top-sm-rel-5pct">
 
         <h1 class="text-3rem m-t-0">California State Website Template</h1>
         <div class="row">
             <div class="offset-lg-2 col-lg-8">
-                <p class="lead m-b-lg">The California State Template is an open source web template and standard offered by the California Department of Technology to state agencies and departments within the State of California and beyond.</p>
+                <p class="lead m-b-lg">The California State Template is an open source web template and standard offered
+                    by the California Department of Technology to state agencies and departments within the State of
+                    California and beyond.</p>
             </div>
         </div>
 
-        <a href="/Getting-started.html" class="btn btn-lg btn-outline-light m-t"><span class="ca-gov-icon-online-services" aria-hidden="true"></span> Getting Started</a>
-        <a href="https://github.com/Office-of-Digital-Innovation" class="btn btn-lg btn-outline-light m-l-md m-t"><span class="ca-gov-icon-download-cloud" aria-hidden="true"></span> Download</a>
-        <a href="/update.html" class="btn btn-lg btn-outline-light m-l-md m-t"><span class="ca-gov-icon-cloud-gear" aria-hidden="true"></span> Update</a>
+        <a href="/Getting-started.html" class="btn btn-lg btn-outline-light m-t"><span
+                class="ca-gov-icon-online-services" aria-hidden="true"></span> Getting Started</a>
+        <a href="https://github.com/Office-of-Digital-Innovation" class="btn btn-lg btn-outline-light m-l-md m-t"><span
+                class="ca-gov-icon-download-cloud" aria-hidden="true"></span> Download</a>
+        <a href="/update.html" class="btn btn-lg btn-outline-light m-l-md m-t"><span class="ca-gov-icon-cloud-gear"
+                aria-hidden="true"></span> Update</a>
 
     </div>
     <div class="explore-invite hidden-xs">
         <div class="text-center">
-            <a href=""><span class="explore-title">Explore</span><span class="ca-gov-icon-caret-down" aria-hidden="true"></span></a>
+            <a href="#main"><span class="explore-title">Explore</span><span class="ca-gov-icon-caret-down"
+                    aria-hidden="true"></span></a>
         </div>
     </div>
 </div>
