fixed profile banners

--- a/sample/index.html
+++ b/sample/index.html
@@ -52,7 +52,7 @@
 
     <div id="main-content" class="main-content">
         <main class="main-primary">
-            <div class="container p-b-lg">
+            <div class="container p-b-lg p-t-md">
                 <div class="group">
                     <div class="two-thirds">
                         <ol class="breadcrumb">
@@ -93,6 +93,7 @@
                                     <li><a href="modal.html">Modal <span class="label label-info">new</span></a></li>
                                     <li><a href="progress-bars.html">Progress Bars</a></li>
                                     <li><a href="progress-blocks.html">Progress Blocks</a></li>
+                                    <li><a href="profile-banners.html">Profile Banners</a></li>
                                     <li><a href="socialsharer.html">SocialSharer</a></li>
                                     <li><a href="spacing.html">Spacing</a></li>
                                     <li><a href="tabs.html">Tabs</a></li>
