--- a/sample/modules/profile-banners-schema.html
+++ b/sample/modules/profile-banners-schema.html
@@ -1,9 +1,10 @@
 <!-- Figure -->
 <figure class="bg-greylight-radialgradient p-a border-0" itemscope itemtype="http://schema.org/Person">
-    <div class="media">
+    <div class="media d-flex">
         <div class="d-flex m-r-md">
             <!-- Figure Image -->
-            <img class="rounded-circle width-80 height-80" src="../images/125x125.jpg" alt="Image Description" itemprop="photo">
+            <img class="rounded-circle width-80 height-80" src="../images/125x125.jpg" alt="Image Description"
+                itemprop="photo">
             <!-- Figure Image -->
         </div>
         <div class="media-body">
