--- a/sample/modules/profile-banners.html
+++ b/sample/modules/profile-banners.html
@@ -1,6 +1,6 @@
 <!-- Figure -->
 <figure class="bg-greylight-radialgradient p-a border-0">
-    <div class="media">
+    <div class="media d-flex">
         <div class="d-flex m-r-md">
             <!-- Figure Image -->
             <img class="rounded-circle width-80 height-80" src="../images/125x125.jpg" alt="Image Description">
