changed label class to badge

--- a/Getting-started.html
+++ b/Getting-started.html
@@ -136,7 +136,7 @@
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
                     </div>
                 </div>
-                <p><span class="label label-info">Note:</span> Load your website faster by using <a
+                <p><span class="badge label-info">Note:</span> Load your website faster by using <a
                         href="/cdn.html">State Template CDN</a></p>
 
 
@@ -174,7 +174,7 @@
     <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span></pre>
 
-                <p><span class="label label-info">Note:</span> Template above does not include any State Template
+                <p><span class="badge label-info">Note:</span> Template above does not include any State Template
                     content, modules or server side includes.</p>
 
                 <h2>Server Side Includes</h2>
@@ -222,7 +222,7 @@
     <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span>
 </pre>
-                <p><span class="label label-info">Note:</span> The web server that hosts the State Template should be
+                <p><span class="badge label-info">Note:</span> The web server that hosts the State Template should be
                     configured to process SSI's with the .html extension.</p>
 
             </div>
