--- a/sample/colorscheme-orangecounty.html
+++ b/sample/colorscheme-orangecounty.html
@@ -243,7 +243,7 @@
                             </p>
 
                             <p>
-                                <span class="label label-info">Note:</span> <span class="font-size-sm"> Before changing
+                                <span class="badge label-info">Note:</span> <span class="font-size-sm"> Before changing
                                     your colors make sure that your custom theme colors have sufficient color cotrast
                                     ratios.</span>
                             </p>
