--- a/sample/featured-search.html
+++ b/sample/featured-search.html
@@ -105,7 +105,7 @@ Based on Twitter Bootstrap
 
 
 
-                        <p><span class="label label-info">NOTE:</span> Featured search can be used with any page
+                        <p><span class="badge label-info">NOTE:</span> Featured search can be used with any page
                             template, see available options by viewing <a href="page-templates.html"> page
                                 templates</a>.</p>
                         <p>&nbsp;</p>
