--- a/sample/fixed-header.html
+++ b/sample/fixed-header.html
@@ -94,7 +94,7 @@
 ...
 &lt;/header&gt;
 </pre>
-                        <p><span class="label label-info">NOTE:</span> The <code>.fixed</code> class may affect how some
+                        <p><span class="badge label-info">NOTE:</span> The <code>.fixed</code> class may affect how some
                             body elements render on your page in relation to the top of page positioning. Please test
                             accordingly. </p>
 
