--- a/sample/grid.html
+++ b/sample/grid.html
@@ -89,13 +89,13 @@ Based on Twitter Bootstrap
                             <li>Content should be placed within fractional layout columns.</li>
                         </ul>
 
-                        <p><span class="label label-info">NOTE:</span> Grids display a 1px gray border in demo only.</p>
+                        <p><span class="badge label-info">NOTE:</span> Grids display a 1px gray border in demo only.</p>
 
                         <h2>Example:</h2>
                         <!--#include virtual="/sample/modules/grid.html" -->
 
                         <hr class="m-t-lg" />
-                        <p class="lead"><span class="label label-info">NOTE:</span> For more CSS breakpoint-specific
+                        <p class="lead"><span class="badge label-info">NOTE:</span> For more CSS breakpoint-specific
                             column classes and other responsive grid options we suggest utilizing what is available in
                             Bootstrap.</p>
 
