--- a/sample/headers.html
+++ b/sample/headers.html
@@ -76,7 +76,7 @@ Based on Twitter Bootstrap
                             automatically position the icon outside of the column, ensuring your header aligns with
                             paragraphs. (See the <a href="icon-fonts.html">Icon Font Library</a> for a list of all the
                             icons.)</p>
-                        <p><span class="label label-info">NOTE:</span> Because the icon-fonts are subject to normal
+                        <p><span class="badge label-info">NOTE:</span> Because the icon-fonts are subject to normal
                             character spacing rules. It is important to have a space between the icon's
                             <code>&lt;/span&gt;</code> and the header text
                         </p>
