--- a/sample/modules/buttons-disabled.html
+++ b/sample/modules/buttons-disabled.html
@@ -1,5 +1,6 @@
 <h2>Links as Disabled Buttons</h2>
-<p><span class="label label-info">NOTE:</span> This class will only change the <code>&lt;a&gt;</code>'s appearance, not its functionality. Use custom JavaScript to disable links.</p>
+<p><span class="badge label-info">NOTE:</span> This class will only change the <code>&lt;a&gt;</code>'s appearance, not
+    its functionality. Use custom JavaScript to disable links.</p>
 <div class="btn-row">
     <a class="btn btn-default disabled" role="button">.btn .btn-default .disabled</a>
     <a class="btn btn-primary disabled" role="button">.btn .btn-primary .disabled</a>
@@ -7,9 +8,11 @@
     <a class="btn btn-secondary disabled" role="button">.btn .btn-secondary .disabled</a>
     <a class="btn btn-standout disabled" role="button">.btn .btn-standout .disabled</a>
 </div>
-    <h2>Buttons as Disabled Buttons</h2>
+<h2>Buttons as Disabled Buttons</h2>
 <div class="btn-row">
-    <p><span class="label label-info">NOTE:</span> If you add the <code>disabled</code> attribute to a <code>&lt;button&gt;</code>, Internet Explorer 9 and below will render text gray with a not so pretty text-shadow that cannot be fixed.</p>
+    <p><span class="badge label-info">NOTE:</span> If you add the <code>disabled</code> attribute to a
+        <code>&lt;button&gt;</code>, Internet Explorer 9 and below will render text gray with a not so pretty
+        text-shadow that cannot be fixed.</p>
     <button class="btn btn-default" disabled="disabled">.btn .btn-default</button>
     <button class="btn btn-primary" disabled="disabled">.btn .btn-primary</button>
     <button class="btn btn-highlight" disabled="disabled">.btn .btn-highlight</button>
