--- a/sample/navigation-full-width-icons.html
+++ b/sample/navigation-full-width-icons.html
@@ -3,28 +3,30 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
-<!--[if (gt IE 9)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if (gt IE 9)]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
 
 <head>
 
- <!--    California State Template (beta)
+    <!--    California State Template (beta)
  
  
 Based on Twitter Bootstrap
 -->
-<meta charset="utf-8">
+    <meta charset="utf-8">
 
-<title>Full Width Navigation with Icons</title>
+    <title>Full Width Navigation with Icons</title>
 
-<meta name="Author" content="State of California" />
-<meta name="Description" content="State of California" />
-<meta name="Keywords" content="California, government" />
+    <meta name="Author" content="State of California" />
+    <meta name="Description" content="State of California" />
+    <meta name="Keywords" content="California, government" />
 
-<!--#include virtual="/ssi/head-css-js.html" -->
-<script type="text/javascript">
-var defaultActiveLink = "Components";
-</script>
+    <!--#include virtual="/ssi/head-css-js.html" -->
+    <script type="text/javascript">
+        var defaultActiveLink = "Components";
+    </script>
 </head>
 
 <body class="two-column">
@@ -53,32 +55,38 @@ var defaultActiveLink = "Components";
         <div class="header-decoration"></div>
     </header>
 
-<div id="main-content" class="main-content">
-    <div class="section">
-        <main class="main-primary">            
-            <ol class="breadcrumb">
-                <li><a href="../index.html" title="Home page">Home</a></li>
-                <li><a href="/sample/navsamples.html" title="Navigation Samples page">Navigation Samples</a></li>
-                <li class="active">Full Width Navigation with Icons</li>
-            </ol>
+    <div id="main-content" class="main-content">
+        <div class="section">
+            <main class="main-primary">
+                <ol class="breadcrumb">
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="/sample/navsamples.html" title="Navigation Samples page">Navigation Samples</a></li>
+                    <li class="active">Full Width Navigation with Icons</li>
+                </ol>
 
-            <h1>Full Width Navigation with Icons</h1>
-            <p>
-                Sometimes there is a need to fit more navigation items in main navigation.
-                This is when full width navigation could be handy. This menu style can be set by adding class <code>.nav-full-width-icons</code> to the
-                <code>header</code> tag. Also, this menu version uses <code>branding-full-width-icons.html</code> instead of <code>utility-header.html</code> server side include.
-            </p>
-            <p>
-                <span class="label label-info">Note:</span> Please note that there are no social icons links in the <code>branding-full-width-icons.html</code>
-                include just to make sure it looks right in the mobile view.
-                For the same reason, there are only two utility links (buttons) that are used along with ca.gov logo and organization branding image.
+                <h1>Full Width Navigation with Icons</h1>
+                <p>
+                    Sometimes there is a need to fit more navigation items in main navigation.
+                    This is when full width navigation could be handy. This menu style can be set by adding class
+                    <code>.nav-full-width-icons</code> to the
+                    <code>header</code> tag. Also, this menu version uses <code>branding-full-width-icons.html</code>
+                    instead of <code>utility-header.html</code> server side include.
+                </p>
+                <p>
+                    <span class="badge label-info">Note:</span> Please note that there are no social icons links in the
+                    <code>branding-full-width-icons.html</code>
+                    include just to make sure it looks right in the mobile view.
+                    For the same reason, there are only two utility links (buttons) that are used along with ca.gov logo
+                    and organization branding image.
 
-            </p>
-            <p>Full Width Navigation with icons can be single level navigation as well as megamenu. If for some reason you don't want to use icons on top of the main navigation links simply add class <code>.no-icons</code> to the <code>nav</code> tag.</p>
+                </p>
+                <p>Full Width Navigation with icons can be single level navigation as well as megamenu. If for some
+                    reason you don't want to use icons on top of the main navigation links simply add class
+                    <code>.no-icons</code> to the <code>nav</code> tag.</p>
 
 
-            <h2 class="h3">Full width navigation with icons header example:</h2>
-            <pre>
+                <h2 class="h3">Full width navigation with icons header example:</h2>
+                <pre>
 <span class="text-accent-p2">&lt;header</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed nav-full-width-icons"</span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
 <span class="text-success">&lt;!--#include virtual="/ssi/settings-bar.html" --&gt;</span>
@@ -95,30 +103,31 @@ var defaultActiveLink = "Components";
 </pre>
 
 
-            <h2>More Navigation Samples</h2>
-            <ul>
+                <h2>More Navigation Samples</h2>
+                <ul>
 
-                <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-                <li><a href="navigation-single.html">Single Level Navigation</a></li>
-                <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
-                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
-                <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
-                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
-                <li><a href="navigation-sidebar.html">Side navigation menu</a></li>
-            </ul>
+                    <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
+                    <li><a href="navigation-single.html">Single Level Navigation</a></li>
+                    <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
+                    <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                    <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
+                    <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+                    <li><a href="navigation-sidebar.html">Side navigation menu</a></li>
+                </ul>
 
-        </main>
-        
-        <div class="main-secondary" role="complementary">
-            <!--#include virtual="/sample/modules/profile-banners.html" -->
+            </main>
+
+            <div class="main-secondary" role="complementary">
+                <!--#include virtual="/sample/modules/profile-banners.html" -->
+            </div>
         </div>
     </div>
-</div>
 
 
-<!--#include virtual="/ssi/global-footer.html" -->
+    <!--#include virtual="/ssi/global-footer.html" -->
 
-<!--#include virtual="/ssi/scripts.html" -->
+    <!--#include virtual="/ssi/scripts.html" -->
 
 </body>
+
 </html>
