--- a/search-directory.html
+++ b/search-directory.html
@@ -306,7 +306,7 @@
                     </ul>
                 </nav>
 
-                <p class="m-t-md"><span class="label label-info">Note:</span> This is a sample layout for a search
+                <p class="m-t-md"><span class="badge label-info">Note:</span> This is a sample layout for a search
                     directory page which requires additional programing for functionality based on your business needs.
                 </p>
                 <hr />
