--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                                 href="https://github.com/Office-of-Digital-Innovation/California-State-Template"
                                 target="_blank">GitHub Repository</a>.</p>
 
-                        <p><span class="label label-info">Note:</span> You will be able to download each version using
+                        <p><span class="badge label-info">Note:</span> You will be able to download each version using
                             the GitHub repository links. Look for the &quot;Clone or Download&quot; button on the
                             respective GitHub page.</p>
                         <p>&nbsp;</p>
