--- a/cdn.html
+++ b/cdn.html
@@ -142,7 +142,7 @@
     <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span>
 </pre>
-                <p><span class="label label-info">Note:</span> The web server that hosts the State Template should be
+                <p><span class="badge label-info">Note:</span> The web server that hosts the State Template should be
                     configured to process SSI's with the .html extension.</p>
 
 
