--- a/sample/breadcrumb.html
+++ b/sample/breadcrumb.html
@@ -92,7 +92,7 @@ Based on Twitter Bootstrap
                         <p>If you wish to have breadcrumbs generated dynamicaly based on folder structure, add the class
                             <code>.dynamic</code> to the <code>.breadcrumb</code> list.
                         </p>
-                        <p><span class="label label-info">NOTE:</span> If using this method, it is recommended that
+                        <p><span class="badge label-info">NOTE:</span> If using this method, it is recommended that
                             folder names be Title Case and use underbars or dashes in lieu of spaces.</p>
 
                         <h2>Example:</h2>
