--- a/sample/job-list.html
+++ b/sample/job-list.html
@@ -89,7 +89,7 @@ Based on Twitter Bootstrap
                             <li><code>.location</code> - Single location</li>
                         </ul>
 
-                        <p><span class="label label-info">Note:</span> Job items have additional classes on sub elements
+                        <p><span class="badge label-info">Note:</span> Job items have additional classes on sub elements
                             that may not be used in the current design, however they could be used in the future.</p>
 
                         <!--#include virtual="/sample/modules/schema-boilerplate.html" -->
