--- a/sample/large-header-banner.html
+++ b/sample/large-header-banner.html
@@ -83,7 +83,7 @@ Based on Twitter Bootstrap
                     <code>/ssi/header-large-banner.html</code> using the SSI include method right below the header of
                     the desired page.
                 </p>
-                <p><span class="label label-info">Note:</span> To have the banner dissapear in a mobile viewport add the
+                <p><span class="badge label-info">Note:</span> To have the banner dissapear in a mobile viewport add the
                     <code>.primary</code> class to the <code>&lt;body&gt;</code> element of the page otherwise the
                     banner will remain in all screen sizes.
                 </p>
