--- a/sample/lists.html
+++ b/sample/lists.html
@@ -126,7 +126,7 @@ Based on Twitter Bootstrap
                             <code>.accordion-list</code> in conjunction with any list style provided.
                         </p>
 
-                        <p><span class="label label-info">Note:</span> Accordion List uses HTML5 roles, some ARIA
+                        <p><span class="badge label-info">Note:</span> Accordion List uses HTML5 roles, some ARIA
                             properties, and IDs for accessibility. For best accessibility paractices certain keyboard
                             shortcuts are also implemented.</p>
 
