--- a/sample/page-templates.html
+++ b/sample/page-templates.html
@@ -102,7 +102,7 @@
  &lt;!--#include virtual=&quot;/ssi/<strong>header-large-banner.html</strong>&quot; --&gt;
  &lt;!--#include virtual=&quot;/ssi/<strong>header-primary-banner.html</strong>&quot; --&gt;
  &lt;!--#include virtual=&quot;/ssi/<strong>header-slideshow-banner.html</strong>&quot; --&gt;</pre>
-                <p><span class="label label-info">Note:</span> You can view the source code for each banner type by
+                <p><span class="badge label-info">Note:</span> You can view the source code for each banner type by
                     downloading the template package and inspecting the template files or using the links below.</p>
 
                 <p>All of the page template options are demonstrated below in addition to the two-column page layout.
@@ -119,7 +119,7 @@
                     Banner</a>
                 <a href="slideshow-header-banner.html" class="btn btn-secondary m-r-sm m-b-sm">See Slideshow Banner</a>
 
-                <p><span class="label label-info">Note:</span> Some examples go to a new page.</p>
+                <p><span class="badge label-info">Note:</span> Some examples go to a new page.</p>
                 <h2>Backwards Compatability</h2>
                 <p> In v4 of the State Template page layouts were controlled by applying the <code>.primary</code> class
                     to the <code>&lt;body&gt;</code> element which enabled the taller header image. For greater
