--- a/sample/profile-list.html
+++ b/sample/profile-list.html
@@ -74,7 +74,7 @@ Based on Twitter Bootstrap
                     widgets, the list item contains the following child elements. <code>.thumbnail</code>,
                     <code>.header</code>, <code>.body</code>, and <code>.footer</code>
                 </p>
-                <p><span class="label label-info">Note:</span> List items have additional classes on sub elements that
+                <p><span class="badge label-info">Note:</span> List items have additional classes on sub elements that
                     are not being used in the current design, however they could be used in the future.</p>
 
                 <!--#include virtual="/sample/modules/schema-boilerplate.html" -->
