--- a/sample/testimonials.html
+++ b/sample/testimonials.html
@@ -98,7 +98,7 @@ Based on Twitter Bootstrap
                     <div class="half">
                         <h2>Thumnail Right Aligned:</h2>
                         <!--#include virtual="/sample/modules/testimonial-danger.html" -->
-                        <p><span class="label label-info">Note:</span> The source order for <code>.thumbnail</code> and
+                        <p><span class="badge label-info">Note:</span> The source order for <code>.thumbnail</code> and
                             <code>.testimonial-body</code> have been reversed. Source order is important when using this
                             component with this configuration.
                         </p>
