updated badges in samples landing page

--- a/sample/index.html
+++ b/sample/index.html
@@ -77,7 +77,9 @@
                                     <li><a href="accordions.html">Accordions</a></li>
                                     <li><a href="alert-banner.html">Alert Banner</a></li>
                                     <li><a href="large-header-banner.html">Banner</a></li>
-                                    <li><a href="blurbs.html">Blurb <span class="badge label-info">new</span></a></li>
+                                    <li><a href="blurbs.html">Blurb <span
+                                                class="badge label-info font-size-11">new</span></a>
+                                    </li>
                                     <li><a href="blockquotes.html">Blockquotes</a></li>
                                     <li><a href="breadcrumb.html">Breadcrumb</a></li>
                                     <li><a href="buttons.html">Buttons</a></li>
@@ -93,7 +95,8 @@
                                     <li><a href="gradient-backgrounds.html">Gradient Backgrounds</a></li>
                                     <li><a href="horizontal-rules.html">Horizontal Rules</a></li>
                                     <li><a href="icon-fonts.html">Icon Font Library</a></li>
-                                    <li><a href="modal.html">Modal <span class="badge label-info">new</span></a></li>
+                                    <li><a href="modal.html">Modal <span
+                                                class="badge label-info  font-size-11">new</span></a></li>
                                     <li><a href="progress-bars.html">Progress Bars</a></li>
                                     <li><a href="progress-blocks.html">Progress Blocks</a></li>
                                     <li><a href="profile-banners.html">Profile Banners</a></li>
@@ -103,7 +106,8 @@
                                     <li><a href="tables.html">Tables</a></li>
                                     <li><a href="testimonials.html">Testimonials</a></li>
                                     <li><a href="text-accent.html">Text Accent Colors</a></li>
-                                    <li><a href="timeline.html">Timeline <span class="badge label-info">new</span></a>
+                                    <li><a href="timeline.html">Timeline <span
+                                                class="badge label-info  font-size-11">new</span></a>
                                     </li>
                                     <li><a href="typography.html">Typography</a></li>
                                 </ul>
@@ -123,7 +127,7 @@
                                     code.
                                 </p>
                                 <p>
-                                    <span class="label label-primary">NOTE:</span> When using custom components and
+                                    <span class="badge label-primary">NOTE:</span> When using custom components and
                                     content
                                     modules that are not documented as part of the State Template, migration to future
                                     versions
